<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="samsolfeggio.myapplication.com.samsolfeggio.myapplication.MusicQuestionActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="350dp"
        android:alpha="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@drawable/back"
        tools:visibility="visible" />
    <Button
        android:id="@+id/button12"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:alpha="0.9"
        android:onClick="onClick"
        android:text="@string/returner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/button22"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:onClick="onClick"
        android:text="@string/returner"
        android:alpha="0.9"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/button32"
        android:layout_width="180dp"
        android:layout_height="78dp"
        android:onClick="onClick"
        android:alpha="0.9"
        android:text="@string/returner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="386dp"
        android:layout_height="26dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/Question_Mus"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/start"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:onClick="play"
        android:alpha="0.8"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/pause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/pause"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:onClick="pause"
        android:text="@string/pause"
        android:alpha="0.8"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/stop"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:onClick="stop"
        android:text="@string/stop"
        android:alpha="0.8"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pause"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />


</androidx.constraintlayout.widget.ConstraintLayout>