<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="samsolfeggio.myapplication.com.samsolfeggio.myapplication.RsultActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="350dp"
        android:alpha="0.05"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="330dp"
        android:layout_height="82dp"
        android:alpha="1"
        android:gravity="center"
        android:text="@string/corr_ans_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="262dp"
        android:layout_height="275dp"
        android:gravity="center"
        android:textSize="200sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="337dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/end_mes"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="343dp"
        android:layout_height="66dp"
        android:onClick="onClick"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.13999999" />

</androidx.constraintlayout.widget.ConstraintLayout>