<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="samsolfeggio.myapplication.com.samsolfeggio.myapplication.GraficQuestionActivity">

    <Button
        android:id="@+id/button9n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toTopOf="@+id/button10n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button7n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/button8n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/button7n"
        app:layout_constraintEnd_toStartOf="@+id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button4n"
        android:layout_width="51dp"

        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7n"
        app:layout_constraintVertical_bias="0.0" />


    <com.samsolfeggio.myapplication.DrawView
        android:id="@+id/frame"
        android:layout_width="300dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:ignore="MissingConstraints">
    </com.samsolfeggio.myapplication.DrawView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="350dp"
        android:alpha="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@drawable/back"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/quest_text"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/button15n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/button14n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button14n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/button13n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button12n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/button11n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button13n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/button12n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button11n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/button10n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button10n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />


    <Button
        android:id="@+id/button_flat"
        android:layout_width="131dp"
        android:layout_height="81dp"
        android:onClick="onSetClick"
        android:text="@string/flat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/button_none"
        android:layout_width="131dp"
        android:layout_height="81dp"
        android:onClick="onSetClick"
        android:text=""
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/button_sharp"
        android:layout_width="131dp"
        android:layout_height="81dp"
        android:onClick="onSetClick"
        android:text="@string/sharp"
        app:layout_constraintBottom_toTopOf="@+id/button_flat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_note" />

    <Button
        android:id="@+id/button_note"
        android:layout_width="131dp"
        android:layout_height="81dp"
        android:onClick="onSetClick"
        android:text="@string/note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/button5n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6n"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button1n"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:alpha="0"
        android:onClick="buttons_listener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2n"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/button_clear"
        android:layout_width="131dp"
        android:layout_height="81dp"
        android:onClick="onSetDelClick"
        android:text="@string/del"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="131dp"
        android:layout_height="81dp"
        android:onClick="onCheckClick"
        android:text="@string/check"
        app:layout_constraintBottom_toTopOf="@+id/button_none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear"
        tools:ignore="OnClick"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="755dp" />


</androidx.constraintlayout.widget.ConstraintLayout>